--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <!-- BADGES -->
       <div class="badges-container">
-        <div class="badge-box">
+        <div class="badge-box" style="--i:1;">
           <div class="badge-box__img-wrapper">
             <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
             <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
@@ -39,7 +39,7 @@
           </div>
           <span class="badge-box__text">Rated 5 Stars in Reviews</span>
         </div>
-        <div class="badge-box">
+        <div class="badge-box" style="--i:2;">
           <div class="badge-box__img-wrapper">
             <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
             <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
@@ -49,7 +49,7 @@
           </div>
           <span class="badge-box__text">Rated 5 Stars in Report Guru</span>
         </div>
-        <div class="badge-box">
+        <div class="badge-box" style="--i:3;">
           <div class="badge-box__img-wrapper">
             <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
             <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
@@ -64,7 +64,7 @@
 
     <!-- CARDS -->
     <div class="proof-container">
-      <div class="proof-box">
+      <div class="proof-box" style="--i:4;">
         <img src="/images/image-colton.jpg" alt="person image" class="proof-box__img">
         <h4 class="proof-box__heading">
           <span class="proof-box__heading--main">Colton Smith</span>
@@ -76,7 +76,7 @@
           Excellent!"
         </p>
       </div>
-      <div class="proof-box">
+      <div class="proof-box" style="--i:5;">
         <img src="/images/image-irene.jpg" alt="person image" class="proof-box__img">
         <h4 class="proof-box__heading">
           <span class="proof-box__heading--main">Irene Roberts</span>
@@ -87,7 +87,7 @@
           delighted with the simplicity of the purchase and the speed of delivery."
         </p>
       </div>
-      <div class="proof-box">
+      <div class="proof-box" style="--i:6;">
         <img src="/images/image-anne.jpg" alt="person image" class="proof-box__img">
         <h4 class="proof-box__heading">
           <span class="proof-box__heading--main">Anne Wallace</span>
