--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <!-- displays site properly based on user's device -->
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-  <link rel="stylesheet" href="/style.css">
+  
 
   <title>Frontend Mentor | Social proof section</title>
+  <link rel="stylesheet" href="/FEM_social-proof-section/assets/index.c2f144fc.css">
 </head>
 
 <body>
@@ -31,31 +32,31 @@
       <div class="badges-container">
         <div class="badge-box" style="--i:1;">
           <div class="badge-box__img-wrapper">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
           </div>
           <span class="badge-box__text">Rated 5 Stars in Reviews</span>
         </div>
         <div class="badge-box" style="--i:2;">
           <div class="badge-box__img-wrapper">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
           </div>
           <span class="badge-box__text">Rated 5 Stars in Report Guru</span>
         </div>
         <div class="badge-box" style="--i:3;">
           <div class="badge-box__img-wrapper">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
-            <img src="/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
+            <img src="/FEM_social-proof-section/images/icon-star.svg" alt="rating star" class="badge-box__img">
           </div>
           <span class="badge-box__text">Rated 5 Stars in BestTech</span>
         </div>
@@ -65,7 +66,7 @@
     <!-- CARDS -->
     <div class="proof-container">
       <div class="proof-box" style="--i:4;">
-        <img src="/images/image-colton.jpg" alt="person image" class="proof-box__img">
+        <img src="/FEM_social-proof-section/images/image-colton.jpg" alt="person image" class="proof-box__img">
         <h4 class="proof-box__heading">
           <span class="proof-box__heading--main">Colton Smith</span>
           <span class="proof-box__heading--sub">Verified Buyer</span>
@@ -77,7 +78,7 @@
         </p>
       </div>
       <div class="proof-box" style="--i:5;">
-        <img src="/images/image-irene.jpg" alt="person image" class="proof-box__img">
+        <img src="/FEM_social-proof-section/images/image-irene.jpg" alt="person image" class="proof-box__img">
         <h4 class="proof-box__heading">
           <span class="proof-box__heading--main">Irene Roberts</span>
           <span class="proof-box__heading--sub">Verified Buyer</span>
@@ -88,7 +89,7 @@
         </p>
       </div>
       <div class="proof-box" style="--i:6;">
-        <img src="/images/image-anne.jpg" alt="person image" class="proof-box__img">
+        <img src="/FEM_social-proof-section/images/image-anne.jpg" alt="person image" class="proof-box__img">
         <h4 class="proof-box__heading">
           <span class="proof-box__heading--main">Anne Wallace</span>
           <span class="proof-box__heading--sub">Verified Buyer</span>
